--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,13 @@ button {
     padding-bottom: 2rem;
 }
 
+#error {
+    color: red;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+    padding-bottom: 2rem;
+}
+
 footer {
     background-color: var(--light-blue);
     text-align: center;
