--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,10 @@ footer {
     padding: 1rem 0rem 0rem 1rem;
 }
 
+.footer-list {
+    padding-inline-start: 0px;
+}
+
 .portfolio {
     text-decoration: none;
     color: var(--dark-blue)
